--- a/genindex.html
+++ b/genindex.html
@@ -143,7 +143,7 @@
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context">Context (class in python2verilog.ir.context)</a>
 </li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.context">context (Generator2Graph property)</a>
+      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.context">context (Generator2Graph property)</a>
 </li>
       <li><a href="python2verilog.api.html#python2verilog.api.api.convert_graph">convert_graph() (in module python2verilog.api.api)</a>
 </li>
@@ -209,7 +209,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph">Generator2Graph (class in python2verilog.frontend.generator2graph)</a>
+      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph">Generator2Graph (class in python2verilog.frontend.generator2ir)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.get_all_children">get_all_children() (BasicElement method)</a>
 
@@ -285,7 +285,7 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.left">left (BinOp property)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UBinOp.left">left (UBinOp property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.LessThan">LessThan (class in python2verilog.ir.expressions)</a>
 </li>
@@ -303,6 +303,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Mod">Mod (class in python2verilog.ir.expressions)</a>
+</li>
       <li>
     module
 
@@ -323,7 +325,7 @@
 </li>
         <li><a href="python2verilog.frontend.html#module-python2verilog.frontend">python2verilog.frontend</a>
 </li>
-        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2graph">python2verilog.frontend.generator2graph</a>
+        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2ir">python2verilog.frontend.generator2ir</a>
 </li>
         <li><a href="python2verilog.ir.html#module-python2verilog.ir">python2verilog.ir</a>
 </li>
@@ -412,6 +414,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.PosedgeSyncAlways">PosedgeSyncAlways (class in python2verilog.backend.verilog.ast)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Pow">Pow (class in python2verilog.ir.expressions)</a>
+</li>
       <li>
     python2verilog
 
@@ -469,10 +473,10 @@
 </li>
       </ul></li>
       <li>
-    python2verilog.frontend.generator2graph
+    python2verilog.frontend.generator2ir
 
       <ul>
-        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2graph">module</a>
+        <li><a href="python2verilog.frontend.html#module-python2verilog.frontend.generator2ir">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -555,13 +559,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.ready">ready (Context attribute)</a>
 </li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.results">results (Generator2Graph property)</a>
+      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.results">results (Generator2Graph property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.right">right (BinOp property)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UBinOp.right">right (UBinOp property)</a>
 </li>
-      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2graph.Generator2Graph.root">root (Generator2Graph property)</a>
+      <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.root">root (Generator2Graph property)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.AssignNode.rvalue">rvalue (AssignNode property)</a>
 </li>
@@ -601,6 +605,8 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Ternary">Ternary (class in python2verilog.ir.expressions)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always.to_lines">to_lines() (Always method)</a>
 
       <ul>
@@ -634,8 +640,6 @@
       <ul>
         <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.to_string">(BinOp method)</a>
 </li>
-        <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.CaseItem.to_string">(CaseItem method)</a>
-</li>
         <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.to_string">(Context method)</a>
 </li>
         <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Edge.to_string">(Edge method)</a>
@@ -650,6 +654,12 @@
 </li>
         <li><a href="python2verilog.utils.html#python2verilog.utils.string.Lines.to_string">(Lines method)</a>
 </li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Ternary.to_string">(Ternary method)</a>
+</li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UBinOp.to_string">(UBinOp method)</a>
+</li>
+        <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UnaryOp.to_string">(UnaryOp method)</a>
+</li>
         <li><a href="python2verilog.ir.html#python2verilog.ir.graph.YieldNode.to_string">(YieldNode method)</a>
 </li>
       </ul></li>
@@ -661,10 +671,14 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph.unique_counter">unique_counter (OptimizeGraph attribute)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UBinOp">UBinOp (class in python2verilog.ir.expressions)</a>
+</li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.UnaryOp">UnaryOp (class in python2verilog.ir.expressions)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph.unique_counter">unique_counter (OptimizeGraph attribute)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.unique_id">unique_id (Element property)</a>
 </li>
   </ul></td>
