--- a/_modules/index.html
+++ b/_modules/index.html
@@ -32,7 +32,7 @@
 <ul><li><a href="python2verilog/api/api.html">python2verilog.api.api</a></li>
 <li><a href="python2verilog/backend/verilog/ast.html">python2verilog.backend.verilog.ast</a></li>
 <li><a href="python2verilog/backend/verilog/codegen.html">python2verilog.backend.verilog.codegen</a></li>
-<li><a href="python2verilog/frontend/generator2graph.html">python2verilog.frontend.generator2graph</a></li>
+<li><a href="python2verilog/frontend/generator2ir.html">python2verilog.frontend.generator2ir</a></li>
 <li><a href="python2verilog/ir/context.html">python2verilog.ir.context</a></li>
 <li><a href="python2verilog/ir/expressions.html">python2verilog.ir.expressions</a></li>
 <li><a href="python2verilog/ir/graph.html">python2verilog.ir.graph</a></li>
