--- a/_modules/python2verilog/optimizer/optimizer.html
+++ b/_modules/python2verilog/optimizer/optimizer.html
@@ -64,15 +64,19 @@
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">mapping</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">key</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span> <span class="o">==</span> <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">():</span>
                 <span class="k">return</span> <span class="n">mapping</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
-    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">BinOp</span><span class="p">):</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Int</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">expr</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="p">(</span><span class="n">ir</span><span class="o">.</span><span class="n">BinOp</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UBinOp</span><span class="p">)):</span>
         <span class="n">expr</span><span class="o">.</span><span class="n">left</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">left</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
         <span class="n">expr</span><span class="o">.</span><span class="n">right</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">right</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
-    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">):</span>
-        <span class="c1"># TODO: add BinOp for comparison</span>
-        <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">mapping</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">expr</span> <span class="o">=</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">(</span>
-                <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="n">key</span><span class="o">.</span><span class="n">to_string</span><span class="p">(),</span> <span class="n">value</span><span class="o">.</span><span class="n">to_string</span><span class="p">())</span>
-            <span class="p">)</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Ternary</span><span class="p">):</span>
+        <span class="n">expr</span><span class="o">.</span><span class="n">condition</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">condition</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
+        <span class="n">expr</span><span class="o">.</span><span class="n">left</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">left</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
+        <span class="n">expr</span><span class="o">.</span><span class="n">right</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">right</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UnaryOp</span><span class="p">):</span>
+        <span class="n">expr</span><span class="o">.</span><span class="n">expr</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">expr</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">expr</span><span class="p">))</span>
     <span class="k">return</span> <span class="n">expr</span></div>
 
 
@@ -224,8 +228,7 @@
                         <span class="n">threshold</span><span class="o">=</span><span class="n">threshold</span><span class="p">,</span>
                     <span class="p">)</span>
                     <span class="n">edge</span> <span class="o">=</span> <span class="n">ir</span><span class="o">.</span><span class="n">NonClockedEdge</span><span class="p">(</span>
-                        <span class="c1"># TODO: reason about this,</span>
-                        <span class="c1"># there are yield -&gt; if -&gt; yield with no clocks in-between</span>
+                        <span class="c1"># There may be yield -&gt; if -&gt; yield with no clocks in-between</span>
                         <span class="n">unique_id</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="o">.</span><span class="n">true_edge</span><span class="o">.</span><span class="n">unique_id</span><span class="si">}</span><span class="s2">_</span><span class="si">{</span><span class="n">make_unique</span><span class="p">()</span><span class="si">}</span><span class="s2">_optimal&quot;</span><span class="p">,</span>
                         <span class="n">name</span><span class="o">=</span><span class="s2">&quot;True&quot;</span><span class="p">,</span>
                         <span class="n">child</span><span class="o">=</span><span class="n">optimal_true_node</span><span class="p">,</span>
@@ -235,28 +238,31 @@
                     <span class="c1"># print(&quot;no optimize true branch&quot;)</span>
                     <span class="k">pass</span>
 
-                <span class="k">if</span> <span class="ow">not</span> <span class="n">should_i_be_clocked</span><span class="p">(</span>
-                    <span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">visited</span><span class="p">,</span> <span class="n">threshold</span>
-                <span class="p">):</span>
-                    <span class="c1"># print(&quot;optimzing false branch&quot;)</span>
-                    <span class="n">false_mapping</span> <span class="o">=</span> <span class="n">graph_update_mapping</span><span class="p">(</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
-                    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">):</span>
-                        <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-                    <span class="n">optimal_false_node</span> <span class="o">=</span> <span class="n">helper</span><span class="p">(</span>
-                        <span class="n">element</span><span class="o">=</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span>
-                        <span class="n">mapping</span><span class="o">=</span><span class="n">false_mapping</span><span class="p">,</span>
-                        <span class="n">visited</span><span class="o">=</span><span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">visited</span><span class="p">),</span>
-                        <span class="n">threshold</span><span class="o">=</span><span class="n">threshold</span><span class="p">,</span>
-                    <span class="p">)</span>
-                    <span class="n">edge</span> <span class="o">=</span> <span class="n">ir</span><span class="o">.</span><span class="n">NonClockedEdge</span><span class="p">(</span>
-                        <span class="n">unique_id</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">unique_id</span><span class="si">}</span><span class="s2">_</span><span class="si">{</span><span class="n">make_unique</span><span class="p">()</span><span class="si">}</span><span class="s2">_optimal&quot;</span><span class="p">,</span>
-                        <span class="n">name</span><span class="o">=</span><span class="s2">&quot;False&quot;</span><span class="p">,</span>
-                        <span class="n">child</span><span class="o">=</span><span class="n">optimal_false_node</span><span class="p">,</span>
-                    <span class="p">)</span>
-                    <span class="n">new_node</span><span class="o">.</span><span class="n">optimal_false_edge</span> <span class="o">=</span> <span class="n">edge</span>
-                <span class="k">else</span><span class="p">:</span>
-                    <span class="c1"># print(&quot;No optimize false branch&quot;)</span>
-                    <span class="k">pass</span>
+                <span class="k">if</span> <span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="p">:</span>
+                    <span class="k">if</span> <span class="ow">not</span> <span class="n">should_i_be_clocked</span><span class="p">(</span>
+                        <span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">visited</span><span class="p">,</span> <span class="n">threshold</span>
+                    <span class="p">):</span>
+                        <span class="c1"># print(&quot;optimzing false branch&quot;)</span>
+                        <span class="n">false_mapping</span> <span class="o">=</span> <span class="n">graph_update_mapping</span><span class="p">(</span>
+                            <span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="p">,</span> <span class="n">mapping</span>
+                        <span class="p">)</span>
+                        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">):</span>
+                            <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                        <span class="n">optimal_false_node</span> <span class="o">=</span> <span class="n">helper</span><span class="p">(</span>
+                            <span class="n">element</span><span class="o">=</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">child</span><span class="p">,</span>
+                            <span class="n">mapping</span><span class="o">=</span><span class="n">false_mapping</span><span class="p">,</span>
+                            <span class="n">visited</span><span class="o">=</span><span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">visited</span><span class="p">),</span>
+                            <span class="n">threshold</span><span class="o">=</span><span class="n">threshold</span><span class="p">,</span>
+                        <span class="p">)</span>
+                        <span class="n">edge</span> <span class="o">=</span> <span class="n">ir</span><span class="o">.</span><span class="n">NonClockedEdge</span><span class="p">(</span>
+                            <span class="n">unique_id</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="o">.</span><span class="n">false_edge</span><span class="o">.</span><span class="n">unique_id</span><span class="si">}</span><span class="s2">_</span><span class="si">{</span><span class="n">make_unique</span><span class="p">()</span><span class="si">}</span><span class="s2">_optimal&quot;</span><span class="p">,</span>
+                            <span class="n">name</span><span class="o">=</span><span class="s2">&quot;False&quot;</span><span class="p">,</span>
+                            <span class="n">child</span><span class="o">=</span><span class="n">optimal_false_node</span><span class="p">,</span>
+                        <span class="p">)</span>
+                        <span class="n">new_node</span><span class="o">.</span><span class="n">optimal_false_edge</span> <span class="o">=</span> <span class="n">edge</span>
+                    <span class="k">else</span><span class="p">:</span>
+                        <span class="c1"># print(&quot;No optimize false branch&quot;)</span>
+                        <span class="k">pass</span>
 
                 <span class="c1"># print(f&quot;returning {str(ifelse)} {mapping}&quot;)</span>
                 <span class="k">return</span> <span class="n">new_node</span>
@@ -266,7 +272,7 @@
                     <span class="n">updated</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">backwards_replace</span><span class="p">(</span><span class="n">stmt</span><span class="p">,</span> <span class="n">mapping</span><span class="p">))</span>
                 <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">element</span><span class="o">.</span><span class="n">child</span><span class="o">.</span><span class="n">child</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">):</span>
                     <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">element</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-                <span class="c1"># TODO: currently a clock always happens after a yield,</span>
+                <span class="c1"># Currently a clock always happens after a yield,</span>
                 <span class="c1"># this results in inefficiencies when there is a yield followed by done</span>
                 <span class="c1"># more wave analysis can be done to potentially paramatize this</span>
                 <span class="c1"># e.g. can valid and done both be 1 in the same clock cycle?</span>
